--- a/src/main/resources/templates/plantDetails.html
+++ b/src/main/resources/templates/plantDetails.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
+<head th:replace="fragments/general :: baseHeader(~{:: title})">
   <title>Plant Details</title>
-  <link rel="stylesheet" type="text/css" href="/css/plants.css"/>
 </head>
+
 <body>
-<h1>Details van plant: <span th:text="${plant.name}"></span></h1>
+<div th:replace="fragments/general :: navbar"></div>
+  <h1>Details van plant: <span th:text="${plant.name}"></span></h1>
 
 <table>
   <tr>
     <td>Naam</td>
     <td th:text="${plant.name}"></td>
   </tr>
-  <tr th:each="verzorging : ${plant.verzorgingsKenmerken}">
+  <tr th:each="verzorging : ${plant.verzorgingKenmerken}">
     <td>Verzorging</td>
     <td th:text="${plant.verzorging}"></td>
     <td th:text="${verzorging.displayName}"></td>
