--- a/src/main/resources/templates/plantForm.html
+++ b/src/main/resources/templates/plantForm.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+<head th:replace="fragments/general :: baseHeader(~{:: title})">
     <title>Voeg plant toe</title>
-    <link rel="stylesheet" type="text/css" href="/css/plants.css"/>
 </head>
+
 <body>
+<div th:replace="fragments/general :: navbar"></div>
+    <h1>Voeg een plant toe</h1>
 
-<h1>Voeg een plant toe</h1>
+    <form th:action="@{/plants/new}" method="post" th:object="${plant}">
+        <input type="hidden" th:field="*{plantId}">
+        <table>
+            <tr>
+                <td>Naam</td>
+                <td><input type="text" th:field="*{name}"></td>
+            </tr>
 
-<form th:action="@{/plants/new}" method="post" th:object="${plant}">
-    <input type="hidden" th:field="*{plantId}">
-    <table>
-        <tr>
-            <td>Naam</td>
-            <td><input type="text" th:field="*{name}"></td>
-        </tr>
-
-        <td>
-            <select th:field="*{verzorgingsKenmerken}" multiple>
-                <option th:each="verzorging : ${allVerzorgingskenmerken}" th:value="${verzorging.verzorgingId}" th:text="${verzorging.displayName}"></option>
-            </select>
-        </td>
+                <td>
+                <select th:field="*{verzorgingKenmerken}" multiple>
+                    <option th:each="verzorging : ${allVerzorgingKenmerken}" th:value="${verzorging.verzorgingId}" th:text="${verzorging}"></option>
+                </select>
+            </td>
 <!--        <tr>-->
 <!--            <td>Zaaitijd</td>-->
 <!--            <td><input type="text" th:field="*{zaaiTijd}"></td>-->
@@ -46,10 +45,11 @@
 <!--        <td>Locatie in het bos</td>-->
 <!--        <td><input type="text" th:field="*{locatie}"></td>-->
 <!--        </tr>-->
-    </table>
+        </table>
 
-    <input type="submit" value="Sla plant op">
-</form>
-
+        <input type="submit" value="Sla plant op">
+    </form>
+<div th:replace="fragments/general :: footer"></div>
+<div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
